[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
nalgebra = "0.32.2"
rayon = "1.7.0"
wgpu = "0.15.1"
rand = "0.8.5"
image = "0.24.6"
chrono = "0.4.24"
indicatif = "0.17.2"
winit = "0.28.6"
winit_input_helper = "0.14.1"
pixels = "0.12.1"
crossbeam = "0.8.2"
config = "0.13.3"
