[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
nalgebra = "0.32.5"
rayon = "1.10.0"
wgpu = "0.20.0"
rand = "0.8.5"
image = "0.25.1"
chrono = "0.4.38"
indicatif = "0.17.8"
winit = { version = "0.30.1", features = [ "default" ] }
# might be necessary. if so, downgrade winit to 0.29.15
# winit_input_helper = "0.16.0"
pixels = "0.13.0"
crossbeam = "0.8.4"
config = "0.14.0"
