[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
nalgebra = "0.32.5"
rayon = "1.10.0"
rand = "0.8.5"
image = "0.25.1"
chrono = "0.4.38"
indicatif = "0.17.8"
serde = "1.0.203"
toml = "0.8.19"
